--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,6 @@
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.115.1"
+  HUGO_VERSION = "0.154.5"
   # Uncomment if you need the extended Hugo (libsass, etc.)
-  # HUGO_EXTENDED = "true"
+  HUGO_EXTENDED = "true"
