--- a/data/gallery.yml
+++ b/data/gallery.yml
@@ -1,4 +1,4 @@
-title: "What's going on"
+title: "What's going on?"
 style: "style2 medium lightbox onscroll-fade-in"
 content: |
   There's something for everyone in the Food Justice Program
