--- a/hugo.toml
+++ b/hugo.toml
@@ -32,5 +32,8 @@ disableKinds = ["taxonomy", "section"]
 ## -----------------------------------------------
 
 [Params]
-
+ title = "test"
+ description = "A (modular, highly tweakable) responsive one-page theme for Hugo"
+  logo = "images/banner.jpg"
+  favicon = true
 [Params.social]
