--- a/data/spotlight4.yml
+++ b/data/spotlight4.yml
@@ -3,8 +3,8 @@ style: "style1 orient-left content-align-left image-position-center onscroll-ima
 id: "form"
 title : "Want to know more?"
 content: |
-  Ask a question or sign-up for more information about how to get involved
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdEcC6VhyDr-4MtUApvuuYL8mr5qyw7yTekBfjrazrLRngq6w/viewform?usp=dialog" 
+  Ask a question or sign-up for more information
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdEcC6VhyDr-4MtUApvuuYL8mr5qyw7yTekBfjrazrLRngq6w/viewform?usp=dialog"
         width="100%" height="900" 
         frameborder="0" marginheight="0"
         marginwidth="0">
